force-app/main/default/objects/DairitenSaport_CallData__c/DairitenSaport_CallData__c.object-meta.xml
<CustomObject>
    <label>代理店サポートコールデータ</label>
    <nameField>
        <displayFormat>1{0000000}</displayFormat>
        <label>コール連番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>