force-app/main/default/objects/DairitenSaport_CallData__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>コールオプション　代理店情報</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agency</valueSetName>
    </valueSet>
</CustomField>