force-app/main/default/objects/DairitenSaport_CallData__c/fields/AgencyCodeReference__c.field-meta.xml
<CustomField>
    <fullName>AgencyCodeReference__c</fullName>
    <formula>if(AgencyReference__r.RecordType.Name = &apos;代理店&apos; , AgencyReference__r.CounterpartyCode__c , AgencyReference__r.JurisdictionalStoreCode__c)</formula>
    <label>相手先コード</label>
    <type>Text</type>
</CustomField>