force-app/main/default/objects/DairitenSaport_CallData__c/fields/AgencyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>AgencyCreatedDate__c</fullName>
    <formula>AgencyReference__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【検索用】代理店作成日</label>
    <type>DateTime</type>
</CustomField>