force-app/main/default/objects/DairitenSaport_CallData__c/fields/AgencyReference__c.field-meta.xml
<CustomField>
    <fullName>AgencyReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>相手先名</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notContain</operation>
            <value>顧客</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>代理店サポートコールデータ</relationshipLabel>
    <relationshipName>AgencyAccount</relationshipName>
    <type>Lookup</type>
</CustomField>