force-app/main/default/objects/DairitenSaport_CallData__c/fields/AmiVoice__c.field-meta.xml
<CustomField>
    <fullName>AmiVoice__c</fullName>
    <label>AmiVoiceログ</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>