force-app/main/default/objects/DairitenSaport_CallData__c/fields/AnswerDetails__c.field-meta.xml
<CustomField>
    <fullName>AnswerDetails__c</fullName>
    <label>回答詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>