force-app/main/default/objects/DairitenSaport_CallData__c/fields/AnswerTime__c.field-meta.xml
<CustomField>
    <fullName>AnswerTime__c</fullName>
    <label>回答所要時間</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>