force-app/main/default/objects/DairitenSaport_CallData__c/fields/ASLInquiryCall__c.field-meta.xml
<CustomField>
    <fullName>ASLInquiryCall__c</fullName>
    <label>ASL照会コール</label>
    <length>16</length>
    <type>Text</type>
</CustomField>