force-app/main/default/objects/DairitenSaport_CallData__c/fields/ASLInquiryYesNo__c.field-meta.xml
<CustomField>
    <fullName>ASLInquiryYesNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASL照会</label>
    <type>Checkbox</type>
</CustomField>