force-app/main/default/objects/DairitenSaport_CallData__c/fields/AssistLineTemplate__c.field-meta.xml
<CustomField>
    <fullName>AssistLineTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店サポートテンプレート</label>
    <referenceTo>AssistLineTemplate__c</referenceTo>
    <relationshipName>AssistLineTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>