force-app/main/default/objects/DairitenSaport_CallData__c/fields/Categor3__c.field-meta.xml
<CustomField>
    <fullName>Categor3__c</fullName>
    <label>カテゴリ③</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>（未設定）</fullName>
            </value>
            <value>
                <fullName>自01見込客登録</fullName>
            </value>
            <value>
                <fullName>自02明細付契約</fullName>
            </value>
            <value>
                <fullName>自03他社移行</fullName>
            </value>
            <value>
                <fullName>自04中途更改</fullName>
            </value>
            <value>
                <fullName>自05複数所有新規</fullName>
            </value>
            <value>
                <fullName>自06中断特則</fullName>
            </value>
            <value>
                <fullName>自07継続契約</fullName>
            </value>
            <value>
                <fullName>自08試算対象外（会社計上）</fullName>
            </value>
            <value>
                <fullName>自09長期ノンフリ多割</fullName>
            </value>
            <value>
                <fullName>自01明細付契約（増車、枝番解約）</fullName>
            </value>
            <value>
                <fullName>自02中途更改</fullName>
            </value>
            <value>
                <fullName>自03解約</fullName>
            </value>
            <value>
                <fullName>自04車両入替</fullName>
            </value>
            <value>
                <fullName>自05住所氏名変更</fullName>
            </value>
            <value>
                <fullName>自06その他の異動事由</fullName>
            </value>
            <value>
                <fullName>自01明細付契約</fullName>
            </value>
            <value>
                <fullName>自02更改番号計上</fullName>
            </value>
            <value>
                <fullName>自03中途更改契約</fullName>
            </value>
            <value>
                <fullName>01契約・異動照会</fullName>
            </value>
            <value>
                <fullName>02自動車始期応当契約照会</fullName>
            </value>
            <value>
                <fullName>03質権内容照会</fullName>
            </value>
            <value>
                <fullName>自01事故有契約次年度試算</fullName>
            </value>
            <value>
                <fullName>自02他社移行</fullName>
            </value>
            <value>
                <fullName>01登録状況の確認</fullName>
            </value>
            <value>
                <fullName>02 ID追加・廃止</fullName>
            </value>
            <value>
                <fullName>03拠点追加・削除</fullName>
            </value>
            <value>
                <fullName>04廃止継承関連</fullName>
            </value>
            <value>
                <fullName>05早期申請</fullName>
            </value>
            <value>
                <fullName>01格納場所</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>