force-app/main/default/objects/DairitenSaport_CallData__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <label>カテゴリ①</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0010ＷＥＢオンライン</fullName>
            </value>
            <value>
                <fullName>0020ポータルサイトメニュー</fullName>
            </value>
            <value>
                <fullName>0030業務メニュー</fullName>
            </value>
            <value>
                <fullName>0040ｅ－ＪｉＢＡｉ</fullName>
            </value>
            <value>
                <fullName>0050導入時作業</fullName>
            </value>
            <value>
                <fullName>0060みつもり一家</fullName>
            </value>
            <value>
                <fullName>0070保険会社メニュー</fullName>
            </value>
            <value>
                <fullName>0080生保</fullName>
            </value>
            <value>
                <fullName>0090統合メニュー</fullName>
            </value>
            <value>
                <fullName>0100ＴｏＤｏ・お知らせ</fullName>
            </value>
            <value>
                <fullName>0110共同ＧＷ</fullName>
            </value>
            <value>
                <fullName>0120ハード他</fullName>
            </value>
            <value>
                <fullName>0130ソフトウエア</fullName>
            </value>
            <value>
                <fullName>0140集団扱集金管理</fullName>
            </value>
            <value>
                <fullName>0150他オフラインソフト</fullName>
            </value>
            <value>
                <fullName>0160データ提供</fullName>
            </value>
            <value>
                <fullName>0170タブレット</fullName>
            </value>
            <value>
                <fullName>0800アシストライン照会内容確認（支援事務）</fullName>
            </value>
            <value>
                <fullName>0900他部署を案内・転送</fullName>
            </value>
            <value>
                <fullName>（未設定）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>