force-app/main/default/objects/DairitenSaport_CallData__c/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <label>カテゴリ②</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0010申込書</fullName>
            </value>
            <value>
                <fullName>0020承認書</fullName>
            </value>
            <value>
                <fullName>0040代理店計上</fullName>
            </value>
            <value>
                <fullName>0050計上連絡票</fullName>
            </value>
            <value>
                <fullName>0060直接精算</fullName>
            </value>
            <value>
                <fullName>0070異動試算</fullName>
            </value>
            <value>
                <fullName>0080契約照会</fullName>
            </value>
            <value>
                <fullName>0090事故照会</fullName>
            </value>
            <value>
                <fullName>0100保険料試算</fullName>
            </value>
            <value>
                <fullName>0120入金状況照会</fullName>
            </value>
            <value>
                <fullName>0130代理店実績・成績照会</fullName>
            </value>
            <value>
                <fullName>0140代理店登録状況</fullName>
            </value>
            <value>
                <fullName>0150固定帳票</fullName>
            </value>
            <value>
                <fullName>0160印刷連番照会</fullName>
            </value>
            <value>
                <fullName>0170ＷＥＢオンラインその他</fullName>
            </value>
            <value>
                <fullName>0180継続管理</fullName>
            </value>
            <value>
                <fullName>0190団体加入者照会</fullName>
            </value>
            <value>
                <fullName>0200業務適正照会</fullName>
            </value>
            <value>
                <fullName>0210募集人管理</fullName>
            </value>
            <value>
                <fullName>0220未入金管理</fullName>
            </value>
            <value>
                <fullName>0230練習モード</fullName>
            </value>
            <value>
                <fullName>0240募集人事前設定</fullName>
            </value>
            <value>
                <fullName>0250事故進捗状況照会</fullName>
            </value>
            <value>
                <fullName>0260 クレカ払（登録方式）業務</fullName>
            </value>
            <value>
                <fullName>0270振替不能契約</fullName>
            </value>
            <value>
                <fullName>0280レジペイ</fullName>
            </value>
            <value>
                <fullName>0290他社証券等読取り</fullName>
            </value>
            <value>
                <fullName>0300オンライン領収証</fullName>
            </value>
            <value>
                <fullName>0310ネット口振</fullName>
            </value>
            <value>
                <fullName>0320返還指図書</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>