force-app/main/default/objects/DairitenSaport_CallData__c/fields/CLOSEDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>CLOSEDateAndTime__c</fullName>
    <label>CLOSE日時</label>
    <type>DateTime</type>
</CustomField>