force-app/main/default/objects/DairitenSaport_CallData__c/fields/ConfirmationPartner__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationPartner__c</fullName>
    <label>確認相手</label>
    <length>50</length>
    <type>Text</type>
</CustomField>