force-app/main/default/objects/DairitenSaport_CallData__c/fields/ConfirmedBySuperior__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedBySuperior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASLメンバーに確認した場合</label>
    <type>Checkbox</type>
</CustomField>