force-app/main/default/objects/DairitenSaport_CallData__c/fields/ConfirmedGroup__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedGroup__c</fullName>
    <label>チャットボット</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>確認済（該当無）</fullName>
            </value>
            <value>
                <fullName>確認済（該当有・追加確認）</fullName>
            </value>
            <value>
                <fullName>未確認</fullName>
            </value>
            <value>
                <fullName>確認済（該当無）有</fullName>
            </value>
            <value>
                <fullName>予備1</fullName>
            </value>
            <value>
                <fullName>予備2</fullName>
            </value>
            <value>
                <fullName>予備3</fullName>
            </value>
            <value>
                <fullName>予備4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>