force-app/main/default/objects/DairitenSaport_CallData__c/fields/ConfirmedPersonName__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedPersonName__c</fullName>
    <label>確認した相手</label>
    <length>16</length>
    <type>Text</type>
</CustomField>