force-app/main/default/objects/DairitenSaport_CallData__c/fields/ConversationPartner__c.field-meta.xml
<CustomField>
    <fullName>ConversationPartner__c</fullName>
    <label>会話相手</label>
    <length>50</length>
    <type>Text</type>
</CustomField>