force-app/main/default/objects/DairitenSaport_CallData__c/fields/ConversationPartnerType__c.field-meta.xml
<CustomField>
    <fullName>ConversationPartnerType__c</fullName>
    <label>会話相手タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>代理店</fullName>
                <default>true</default>
                <label>代理店</label>
            </value>
            <value>
                <fullName>営担者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>