force-app/main/default/objects/DairitenSaport_CallData__c/fields/CurrentPerson__c.field-meta.xml
<CustomField>
    <fullName>CurrentPerson__c</fullName>
    <formula>$User.Username</formula>
    <label>現在担当者</label>
    <type>Text</type>
</CustomField>