force-app/main/default/objects/DairitenSaport_CallData__c/fields/DataCreatedTime__c.field-meta.xml
<CustomField>
    <fullName>DataCreatedTime__c</fullName>
    <formula>TIMEVALUE(CreatedDate) + 3600000 * 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【検索用】データ作成時刻</label>
    <type>Time</type>
</CustomField>