force-app/main/default/objects/DairitenSaport_CallData__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <label>コールオプション　新規リリース</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Defect</valueSetName>
    </valueSet>
</CustomField>