force-app/main/default/objects/DairitenSaport_CallData__c/fields/DeploymentNotes__c.field-meta.xml
<CustomField>
    <fullName>DeploymentNotes__c</fullName>
    <label>照会部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>