force-app/main/default/objects/DairitenSaport_CallData__c/fields/DeviceUsed__c.field-meta.xml
<CustomField>
    <fullName>DeviceUsed__c</fullName>
    <label>PC/タブレット</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeviceUsed</valueSetName>
    </valueSet>
</CustomField>