force-app/main/default/objects/DairitenSaport_CallData__c/fields/DirectPhoneCheck__c.field-meta.xml
<CustomField>
    <fullName>DirectPhoneCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>直送電話チェック</label>
    <type>Checkbox</type>
</CustomField>