force-app/main/default/objects/DairitenSaport_CallData__c/fields/Folding__c.field-meta.xml
<CustomField>
    <fullName>Folding__c</fullName>
    <label>折り返し電話番号</label>
    <type>Phone</type>
</CustomField>