force-app/main/default/objects/DairitenSaport_CallData__c/fields/IncomingNumber__c.field-meta.xml
<CustomField>
    <fullName>IncomingNumber__c</fullName>
    <label>着信番号</label>
    <type>Phone</type>
</CustomField>