force-app/main/default/objects/DairitenSaport_CallData__c/fields/InquiryDetails__c.field-meta.xml
<CustomField>
    <fullName>InquiryDetails__c</fullName>
    <label>問い合わせ詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>