force-app/main/default/objects/DairitenSaport_CallData__c/fields/InquiryType__c.field-meta.xml
<CustomField>
    <fullName>InquiryType__c</fullName>
    <label>問い合わせタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InquiryType</valueSetName>
    </valueSet>
</CustomField>