force-app/main/default/objects/DairitenSaport_CallData__c/fields/InsuranceEventList__c.field-meta.xml
<CustomField>
    <fullName>InsuranceEventList__c</fullName>
    <label>保険種目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InsuranceEventList</valueSetName>
    </valueSet>
</CustomField>