force-app/main/default/objects/DairitenSaport_CallData__c/fields/InsuranceTypeList__c.field-meta.xml
<CustomField>
    <fullName>InsuranceTypeList__c</fullName>
    <label>保険種類</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>InsuranceEventList__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>InsuranceTypeList</valueSetName>
    </valueSet>
</CustomField>