force-app/main/default/objects/DairitenSaport_CallData__c/fields/IsApplicable__c.field-meta.xml
<CustomField>
    <fullName>IsApplicable__c</fullName>
    <description>確認済（該当有・追加確認）が選択されている場合True</description>
    <formula>INCLUDES(ConfirmedGroup__c, &apos;確認済（該当有・追加確認）&apos;)</formula>
    <label>確認済（該当有・追加確認）</label>
    <type>Checkbox</type>
</CustomField>