force-app/main/default/objects/DairitenSaport_CallData__c/fields/IsConfirmed__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmed__c</fullName>
    <description>確認済（該当無）が選択されている場合にTrue</description>
    <formula>INCLUDES(ConfirmedGroup__c, &apos;確認済（該当無）&apos;)</formula>
    <label>確認済（該当無）</label>
    <type>Checkbox</type>
</CustomField>