force-app/main/default/objects/DairitenSaport_CallData__c/fields/IsNotApplicable__c.field-meta.xml
<CustomField>
    <fullName>IsNotApplicable__c</fullName>
    <description>確認済（該当無）有が選択されている場合True</description>
    <formula>INCLUDES(ConfirmedGroup__c, &apos;確認済（該当無）有&apos;)</formula>
    <label>確認済（該当無）有</label>
    <type>Checkbox</type>
</CustomField>