force-app/main/default/objects/DairitenSaport_CallData__c/fields/IsNotConfirmedChatbot__c.field-meta.xml
<CustomField>
    <fullName>IsNotConfirmedChatbot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チャットボット未確認</label>
    <type>Checkbox</type>
</CustomField>