force-app/main/default/objects/DairitenSaport_CallData__c/fields/IsOver60Minutes__c.field-meta.xml
<CustomField>
    <fullName>IsOver60Minutes__c</fullName>
    <description>経過時間が60越えを選択している場合、90分越えを選択している場合にTrue</description>
    <formula>INCLUDES(OverMinutes__c, &apos;60分越え&apos;)</formula>
    <label>60分越え</label>
    <type>Checkbox</type>
</CustomField>