force-app/main/default/objects/DairitenSaport_CallData__c/fields/IsOver90Minutes__c.field-meta.xml
<CustomField>
    <fullName>IsOver90Minutes__c</fullName>
    <description>90分越えの場合はTrue</description>
    <formula>INCLUDES(OverMinutes__c, &apos;90分越え&apos;)</formula>
    <label>90分越え</label>
    <type>Checkbox</type>
</CustomField>