force-app/main/default/objects/DairitenSaport_CallData__c/fields/IsUnconfirmed__c.field-meta.xml
<CustomField>
    <fullName>IsUnconfirmed__c</fullName>
    <description>確認済（未確認）が選択されている場合True</description>
    <formula>INCLUDES(ConfirmedGroup__c, &apos;確認済（未確認）&apos;)</formula>
    <label>確認済（未確認）</label>
    <type>Checkbox</type>
</CustomField>