force-app/main/default/objects/DairitenSaport_CallData__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>メモ</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>