force-app/main/default/objects/DairitenSaport_CallData__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>コールオプション　その他</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>予備1</fullName>
            </value>
            <value>
                <fullName>予備2</fullName>
            </value>
            <value>
                <fullName>予備3</fullName>
            </value>
            <value>
                <fullName>予備4</fullName>
            </value>
            <value>
                <fullName>予備5</fullName>
            </value>
            <value>
                <fullName>予備6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>