force-app/main/default/objects/DairitenSaport_CallData__c/fields/OtherYesNo__c.field-meta.xml
<CustomField>
    <fullName>OtherYesNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他</label>
    <type>Checkbox</type>
</CustomField>