force-app/main/default/objects/DairitenSaport_CallData__c/fields/OverMinutes__c.field-meta.xml
<CustomField>
    <fullName>OverMinutes__c</fullName>
    <label>照会対応（所要時間）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60分越え</fullName>
            </value>
            <value>
                <fullName>90分越え</fullName>
            </value>
            <value>
                <fullName>予備1</fullName>
            </value>
            <value>
                <fullName>予備2</fullName>
            </value>
            <value>
                <fullName>予備3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>