force-app/main/default/objects/DairitenSaport_CallData__c/fields/ParentDairiSupport__c.field-meta.xml
<CustomField>
    <fullName>ParentDairiSupport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親問合せ</label>
    <referenceTo>DairitenSaport_CallData__c</referenceTo>
    <relationshipName>ParentDairiSupport</relationshipName>
    <type>Lookup</type>
</CustomField>