force-app/main/default/objects/DairitenSaport_CallData__c/fields/R_Contact__c.field-meta.xml
<CustomField>
    <fullName>R_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>代理店サポートコールデータ</relationshipLabel>
    <relationshipName>R_Contact_AgencySupport</relationshipName>
    <type>Lookup</type>
</CustomField>