force-app/main/default/objects/DairitenSaport_CallData__c/fields/Re_inquiry__c.field-meta.xml
<CustomField>
    <fullName>Re_inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再照会</label>
    <type>Checkbox</type>
</CustomField>