force-app/main/default/objects/DairitenSaport_CallData__c/fields/Re_inquiryCall__c.field-meta.xml
<CustomField>
    <fullName>Re_inquiryCall__c</fullName>
    <label>再照会コール</label>
    <length>16</length>
    <type>Text</type>
</CustomField>