force-app/main/default/objects/DairitenSaport_CallData__c/fields/ReceptionDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>ReceptionDateAndTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>受付日時</label>
    <type>DateTime</type>
</CustomField>