force-app/main/default/objects/DairitenSaport_CallData__c/fields/ReceptionType__c.field-meta.xml
<CustomField>
    <fullName>ReceptionType__c</fullName>
    <label>受付種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
                <default>true</default>
                <label>電話</label>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>照会票</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>記録用</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
                <isActive>false</isActive>
                <label>FAX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>