force-app/main/default/objects/DairitenSaport_CallData__c/fields/RecordYesNo__c.field-meta.xml
<CustomField>
    <fullName>RecordYesNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>記録用</label>
    <type>Checkbox</type>
</CustomField>