force-app/main/default/objects/DairitenSaport_CallData__c/fields/Regulations__c.field-meta.xml
<CustomField>
    <fullName>Regulations__c</fullName>
    <label>コールオプション　規定・事務処理案内</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regulations</valueSetName>
    </valueSet>
</CustomField>