force-app/main/default/objects/DairitenSaport_CallData__c/fields/RemoteOperator__c.field-meta.xml
<CustomField>
    <fullName>RemoteOperator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リモートオペレーター</label>
    <type>Checkbox</type>
</CustomField>