force-app/main/default/objects/DairitenSaport_CallData__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回答担当者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>代サポ</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>D_User_Respondents</relationshipName>
    <type>Lookup</type>
</CustomField>