force-app/main/default/objects/DairitenSaport_CallData__c/fields/SalesBranchMailAddress__c.field-meta.xml
<CustomField>
    <fullName>SalesBranchMailAddress__c</fullName>
    <label>営業店メールアドレス</label>
    <type>Email</type>
</CustomField>