force-app/main/default/objects/DairitenSaport_CallData__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <label>コールオプション　営業店照会依頼</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOffice</valueSetName>
    </valueSet>
</CustomField>