force-app/main/default/objects/DairitenSaport_CallData__c/fields/SalesOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeCode__c</fullName>
    <formula>AgencyReference__r.JurisdictionalStoreCode__c</formula>
    <label>営業店コード</label>
    <type>Text</type>
</CustomField>