force-app/main/default/objects/DairitenSaport_CallData__c/fields/SalesOfficeName__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeName__c</fullName>
    <formula>AgencyReference__r.SalesBranchName__r.Name</formula>
    <label>営業店名</label>
    <type>Text</type>
</CustomField>