force-app/main/default/objects/DairitenSaport_CallData__c/fields/ScreenShot__c.field-meta.xml
<CustomField>
    <fullName>ScreenShot__c</fullName>
    <label>画面ショット</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>