force-app/main/default/objects/DairitenSaport_CallData__c/fields/SecondaryInquiry__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>二次照会</label>
    <type>Checkbox</type>
</CustomField>