force-app/main/default/objects/DairitenSaport_CallData__c/fields/SendingMailDate__c.field-meta.xml
<CustomField>
    <fullName>SendingMailDate__c</fullName>
    <label>メール送信日付</label>
    <type>Date</type>
</CustomField>