force-app/main/default/objects/DairitenSaport_CallData__c/fields/Source_Team__c.field-meta.xml
<CustomField>
    <fullName>Source_Team__c</fullName>
    <label>転送元_チーム</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(未設定)</fullName>
                <default>true</default>
                <label>(未設定)</label>
            </value>
            <value>
                <fullName>自動車</fullName>
            </value>
            <value>
                <fullName>火災</fullName>
            </value>
            <value>
                <fullName>傷害新種</fullName>
            </value>
            <value>
                <fullName>全般</fullName>
            </value>
            <value>
                <fullName>PW</fullName>
            </value>
            <value>
                <fullName>チームA</fullName>
                <isActive>false</isActive>
                <label>チームA</label>
            </value>
            <value>
                <fullName>チームB</fullName>
                <isActive>false</isActive>
                <label>チームB</label>
            </value>
            <value>
                <fullName>チームC</fullName>
                <isActive>false</isActive>
                <label>チームC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>