force-app/main/default/objects/DairitenSaport_CallData__c/fields/SourceName__c.field-meta.xml
<CustomField>
    <fullName>SourceName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ユーザー参照、代サポプロファイル限定</description>
    <label>転送元_名前</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>代サポ</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>UserSourceName</relationshipName>
    <type>Lookup</type>
</CustomField>