force-app/main/default/objects/DairitenSaport_CallData__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>オープン</fullName>
            </value>
            <value>
                <fullName>エスカレ</fullName>
            </value>
            <value>
                <fullName>クローズ</fullName>
                <default>true</default>
                <label>クローズ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>