force-app/main/default/objects/DairitenSaport_CallData__c/fields/UsageTime__c.field-meta.xml
<CustomField>
    <fullName>UsageTime__c</fullName>
    <label>使用時間（分）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>