force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/Automobile.recordType-meta.xml
<RecordType>
    <fullName>Automobile</fullName>
    <active>true</active>
    <label>A.アシストライン（自動車）</label>
</RecordType>