force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/D_reimbursement_O_receipt.recordType-meta.xml
<RecordType>
    <fullName>D_reimbursement_O_receipt</fullName>
    <active>true</active>
    <label>G.アシストライン（D精算O領収証）</label>
</RecordType>