force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/Dealer.recordType-meta.xml
<RecordType>
    <fullName>Dealer</fullName>
    <active>true</active>
    <label>I.アシストライン（ディーラ）</label>
</RecordType>