force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/DisabilityNew.recordType-meta.xml
<RecordType>
    <fullName>DisabilityNew</fullName>
    <active>true</active>
    <label>C.アシストライン（傷害新種）</label>
</RecordType>