force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/E_JIBAI.recordType-meta.xml
<RecordType>
    <fullName>E_JIBAI</fullName>
    <active>true</active>
    <label>J.アシストライン（E-JIBAI）</label>
</RecordType>