force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/Fire.recordType-meta.xml
<RecordType>
    <fullName>Fire</fullName>
    <active>true</active>
    <label>B.アシストライン（火災）</label>
</RecordType>