force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <label>D.アシストライン（全般）</label>
</RecordType>