force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/IE.recordType-meta.xml
<RecordType>
    <fullName>IE</fullName>
    <active>true</active>
    <label>F.アシストライン（IE）</label>
</RecordType>