force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/LifeInsurance.recordType-meta.xml
<RecordType>
    <fullName>LifeInsurance</fullName>
    <active>true</active>
    <label>K.アシストライン（生保）</label>
</RecordType>