force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>H.アシストライン（その他）</label>
</RecordType>