force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/Password.recordType-meta.xml
<RecordType>
    <fullName>Password</fullName>
    <active>true</active>
    <label>E.アシストライン（パスワード）</label>
</RecordType>