force-app/main/default/objects/DairitenSaport_CallData__c/recordTypes/SupportOffice.recordType-meta.xml
<RecordType>
    <fullName>SupportOffice</fullName>
    <active>true</active>
    <label>L.アシストライン（支援事務）</label>
</RecordType>