force-app/main/default/objects/DairitenSaport_CallData__c/validationRules/AmiVoice_RequiredCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>AmiVoice_RequiredCheck</fullName>
    <active>true</active>
    <description>AmiVoiceログの必須チェック
（レコードタイプ：支援事務以外）</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c ,&quot;クローズ&quot;), ISBLANK(AmiVoice__c), NOT(RecordType.DeveloperName =&apos;SupportOffice&apos;))</errorConditionFormula>
    <errorDisplayField>AmiVoice__c</errorDisplayField>
    <errorMessage>クローズする際にはAmiVoiceログを入力してください</errorMessage>
</ValidationRule>